Fix styling issues in CSS + HTML, part 5
The select styles are not implemented yet, seems like the name was messed up.

--- a/Transcyclopedia/sanfrancisco/train/css_assets/sf_trains.css
+++ b/Transcyclopedia/sanfrancisco/train/css_assets/sf_trains.css
@@ -123,7 +123,7 @@ body::after {
     overflow-y: hidden;
 }
 
-#trains_info, #trains_routes, #trains_departures, #trains_alerts {
+#trains_info, #trains_lines, #trains_departures, #trains_alerts {
     margin-top: 10px;
     width: 95%;
     height: 30px;
@@ -135,7 +135,7 @@ body::after {
     margin-left: 20px;
 }
 
-#train_info {
+#trains_info {
     width: 93%;
 }
 
